Solution for day 8

--- a/AdventOfCode.fsproj
+++ b/AdventOfCode.fsproj
@@ -13,6 +13,7 @@
     <Compile Include="Year2019Day4.fs" />
     <Compile Include="Year2019Day5.fs" />
     <Compile Include="Year2019Day6.fs" />
+    <Compile Include="Year2019Day8.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
