--- a/src/AdventOfCode.fsproj
+++ b/src/AdventOfCode.fsproj
@@ -17,4 +17,10 @@
     <Compile Include="Program.fs" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Include="inputs\*.txt" Link="inputs\%(RecursiveDir)%(Filename)%(Extension)">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
