--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -17,9 +17,11 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 5.0.100
-    - name: Install dependencies
-      run: dotnet restore
-    - name: Build
-      run: dotnet build --configuration Release --no-restore
-    - name: Test
-      run: dotnet test --no-restore --verbosity normal
+    - name: Install dependencies (./src)
+      run: dotnet restore ./src
+    - name: Install dependencies (./test)
+      run: dotnet restore ./test
+    - name: Build (./src)
+      run: dotnet build ./src --configuration Release --no-restore
+    - name: Test (./test)
+      run: dotnet test ./test --no-restore --verbosity normal
