Use environment NewLine instead of hardcoded \n or \r\n

--- a/tests/AdventOfCodeTests.fsproj
+++ b/tests/AdventOfCodeTests.fsproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-
+    <LangVersion>preview</LangVersion> <!-- For F# 5.0 -->
     <IsPackable>false</IsPackable>
     <GenerateProgramFile>false</GenerateProgramFile>
   </PropertyGroup>
